--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -49,21 +49,101 @@ nav.header-search {
     display: flex;
 }
 
+.left-side-head img {
+    padding: 1em;
+}
+
+.left-side-head button {
+    font-size: 18px;
+    outline: none;
+    background-color: #ffffff;
+    border: 1px solid lightgray;
+    border-radius: 0px 20px 20px 0px;
+    padding: 0.3em;
+}
+
+.left-side-head form {
+    padding-top: 0.6em;
+    padding-left: 1em;
+}
+
+input[type="text"] {
+    outline: none i !important;
+    border: 1px solid lightgray;
+    border-radius: 20px 0px 0px 20px;
+    width: 30em;
+    height: 3em;
+}
+
 .right-side-head{
     display: flex;
+}
+.right-side-head a {
+    color: #5f6368;
+}
+
+.right-side-head a:hover {
+    background-color: rgba(60,64,67,0.08);
+    border-radius: 50%;
+    opacity: 1;
+    outline: none;
+}
+.right-side-head button {
+    border: 1px solid #4285f4;
+    border-radius: 2px 2px 2px 2px;
+    background-color: #4285f4;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    outline: none;
+    width: 6em;
+    height: 2.6em;
+    box-shadow: 1px 0 rgba(0,0,0,.15);
+}
+
+.right-side-head button:hover {
+    background-color: #2b7de9;
+    box-shadow: 0 1px 2px 0 rgba(66,133,244,0.3), 0 1px 3px 1px rgba(66,133,244,0.15);
 }
 
 .header-nav {
     display: flex;
     font-size: 14px !important;
+    padding-left: 10em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.header-nav a {
+    color: #5f6368;
 }
 /*Body*/
+#search-speed {
+    padding-left: 11em;
+}
+
 .search-links {
     display: flex;
     flex-direction: column;
 }
+
+.search-links li {
+    width: 45em;
+    padding-left: 10em;
+}
+
+.search-links a {
+    padding-left: 0.7em;
+    font-size: 20px;
+}
+
+.search-links a:hover {
+    text-decoration: underline;
+}
 .pages {
     display: flex;
+    padding-left: 15em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 /*Footer*/
@@ -76,8 +156,12 @@ nav.header-search {
 
 .location {
     display: flex;
+    padding-left: 10em;
+    padding-bottom: 0.5em;
 }
 
 .footer-nav {
     display: flex;
+    padding-left: 10em;
+    padding-bottom: 1.5em;
 }
