--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -54,12 +54,15 @@ nav.header-search {
 }
 
 .left-side-head button {
+    float: right;
     font-size: 18px;
     outline: none;
     background-color: #ffffff;
     border: 1px solid lightgray;
+    border-left: 0px;
     border-radius: 0px 20px 20px 0px;
-    padding: 0.3em;
+    padding: 0.35em;
+    margin-top: 0.3px;
 }
 
 .left-side-head form {
@@ -68,10 +71,11 @@ nav.header-search {
 }
 
 input[type="text"] {
-    outline: none i !important;
+    outline: none !important;
     border: 1px solid lightgray;
+    border-right: 0px;
     border-radius: 20px 0px 0px 20px;
-    width: 30em;
+    width: 48em;
     height: 3em;
 }
 
@@ -88,6 +92,7 @@ input[type="text"] {
     opacity: 1;
     outline: none;
 }
+
 .right-side-head button {
     border: 1px solid #4285f4;
     border-radius: 2px 2px 2px 2px;
@@ -111,14 +116,42 @@ input[type="text"] {
     padding-left: 10em;
     padding-top: 1em;
     padding-bottom: 1em;
+    border-bottom: 1px solid #dadce0;
 }
 
 .header-nav a {
     color: #5f6368;
 }
+
+.header-nav button {
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 2px 2px 2px 2px;
+    text-align: center;
+}
+
+.header-nav button:hover {
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    transition: all 0.0s;
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+}
+
+#all-link {
+    color: #1a73e8;
+    padding-bottom: 1.3em;
+    border-bottom: 3px solid #1a73e8;
+
+}
+
 /*Body*/
 #search-speed {
     padding-left: 11em;
+    color: #5f6368;
 }
 
 .search-links {
@@ -134,6 +167,7 @@ input[type="text"] {
 .search-links a {
     padding-left: 0.7em;
     font-size: 20px;
+    color: #1a0dab;
 }
 
 .search-links a:hover {
@@ -144,6 +178,11 @@ input[type="text"] {
     padding-left: 15em;
     padding-top: 2em;
     padding-bottom: 2em;
+    color: #4285f4
+}
+
+.pages li:hover {
+    text-decoration: underline;
 }
 
 /*Footer*/
@@ -152,16 +191,23 @@ input[type="text"] {
     left: 0;
     bottom: 0; */
     width: 100%;
+    background-color: rgb(247, 247, 247);
 }
 
 .location {
     display: flex;
     padding-left: 10em;
     padding-bottom: 0.5em;
+    border-bottom: 1px solid #dadce0;
 }
 
 .footer-nav {
     display: flex;
     padding-left: 10em;
+    padding-top: 1em;
     padding-bottom: 1.5em;
+}
+
+.footer-nav li:hover {
+    color: #3c4043;
 }
