--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -185,6 +185,56 @@ input[type="text"] {
     text-decoration: underline;
 }
 
+#rel-search {
+    padding-left: 8.5em;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.extra-searches {
+    display: flex;
+    padding-left: 10em;
+}
+
+.search-more1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-more1 li {
+    background-color: lightgray;
+    border-radius: 20px 20px 20px 20px;
+    padding: 0.8em;
+    margin: 0.5em;
+}
+
+.search-more1 a {
+    color: #000000;
+}
+
+.search-more1 a:hover{
+    text-decoration: underline;
+}
+
+.search-more2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-more2 li {
+    background-color: lightgray;
+    border-radius: 20px 20px 20px 20px;
+    padding: 0.8em;
+    margin: 0.5em;
+}
+
+.search-more2 a {
+    color: #000000;
+}
+
+.search-more2 a:hover {
+    text-decoration: underline;
+}
 /*Footer*/
 .footer-all {
     /*position: fixed;
