--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -106,6 +106,8 @@ input[type="search"] {
     width: 6em;
     height: 2.6em;
     box-shadow: 1px 0 rgba(0,0,0,.15);
+    position: relative;
+    bottom: 0.5em;
 }
 
 .right-side-head button:hover {
@@ -134,6 +136,8 @@ input[type="search"] {
     color: #5f6368;
     border-radius: 2px 2px 2px 2px;
     text-align: center;
+    position: relative;
+    bottom: 0.2em;
 }
 
 .header-nav button:hover {
@@ -199,19 +203,23 @@ tr {
 
 .pages {
     display: flex;
-    padding-left: 15em;
+    padding-left: 22em;
     padding-top: 2em;
     padding-bottom: 2em;
-    color: #4285f4
 }
 
 .pages li:hover {
     text-decoration: underline;
 }
 
+.pages li a {
+    color: #4285f4;
+    padding: 0.5em;
+}
+
 #rel-search {
-    padding-left: 8.5em;
-    font-size: 18px;
+    padding-left: 8em;
+    font-size: 19px;
     font-weight: 400;
 }
 
@@ -226,10 +234,13 @@ tr {
 }
 
 .search-more1 li {
-    background-color: lightgray;
-    border-radius: 20px 20px 20px 20px;
+    background-color: #f1f3f4;
+    border-radius: 22px 22px 22px 22px;
     padding: 0.8em;
     margin: 0.5em;
+    width: 18em;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .search-more1 a {
@@ -246,10 +257,13 @@ tr {
 }
 
 .search-more2 li {
-    background-color: lightgray;
-    border-radius: 20px 20px 20px 20px;
+    background-color: #f1f3f4;
+    border-radius: 22px 22px 22px 22px;
     padding: 0.8em;
     margin: 0.5em;
+    width: 18em;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .search-more2 a {
@@ -273,8 +287,23 @@ tr {
     padding-left: 10em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid #dadce0;
+    color: #5f6368
 }
 
+.location li #split {
+    color: #5f6368;
+    border-left: 1px solid #dadce0;
+}
+
+.location li a {
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    color: #5f6368
+}
+.location-link:hover {
+    color: #3c4043;
+}
 .footer-nav {
     display: flex;
     padding-left: 10em;
@@ -282,6 +311,10 @@ tr {
     padding-bottom: 1.5em;
 }
 
-.footer-nav li:hover {
+.footer-nav li a {
+    color: #5f6368;
+}
+
+.footer-nav li a:hover {
     color: #3c4043;
 }
