--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -70,6 +70,10 @@ nav.header-search {
     padding-left: 1em;
 }
 
+.search {
+    padding-left: 1em;
+}
+
 input[type="search"] {
     outline: none !important;
     border: 1px solid lightgray;
